--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "mongoose": "^4.11.3",
     "morgan": "^1.8.2",
     "passport": "^0.3.2",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^1.0.0",
     "path": "^0.12.7",
     "yargs": "^8.0.2"
   },
