--- a/package.json
+++ b/package.json
@@ -23,17 +23,23 @@
     "body-parser": "^1.17.2",
     "chalk": "^2.0.1",
     "compression": "^1.7.0",
+    "connect-flash": "~0.1.1",
     "cookie-parser": "^1.4.3",
     "cors": "^2.8.4",
+    "crypto": "^1.0.1",
     "express": "^4.15.3",
+    "express-jwt": "^5.3.1",
+    "express-session": "~1.14.1",
     "glob": "^7.1.2",
     "if-env": "^1.0.4",
+    "jsonwebtoken": "^8.3.0",
     "moment": "^2.18.1",
     "mongoose": "^4.11.3",
     "morgan": "^1.8.2",
     "passport": "^0.3.2",
+    "passport-facebook": "~2.1.1",
+    "passport-google-oauth": "~1.0.0",
     "passport-local": "^1.0.0",
-    "passport-local-mongoose": "^1.0.0",
     "path": "^0.12.7",
     "yargs": "^8.0.2"
   },
