--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
   "license": "MIT",
   "homepage": "https://www.shyampadia.com",
   "dependencies": {
-    "bcrypt": "^1.0.2",
     "body-parser": "^1.18.3",
     "chalk": "^2.4.1",
     "compression": "^1.7.3",
@@ -36,6 +35,7 @@
     "moment": "^2.22.2",
     "mongoose": "^4.13.14",
     "morgan": "^1.8.2",
+    "nodemon": "^1.18.3",
     "passport": "^0.3.2",
     "passport-facebook": "~2.1.1",
     "passport-google-oauth": "~1.0.0",
